# Ghost

./: .env  .gitattributes  pyproject.toml  readme.md  temp.py
archive_src/data_processing/: base_json_extractor.py  preprocess_text.py
archive_src/mlflow_pipeline/: chunk_pillar1.py  chunk_pillar2.py  injest_pillar1.py  process_all.py
archive_src/retrieval/: embedding.py
archive_src/utils/: config_loader.py
config/: development.yaml  settings.py
config/model_configs/: embedding_config.yaml  llm_config.yaml  vector_db_config.yaml
mlruns/0/: meta.yaml
mlruns/126037532139096706/: meta.yaml
mlruns/210182664288682669/: meta.yaml
mlruns/449573026355709035/: meta.yaml
src/: __init__.py
src/chunking/: legal_chunker.py  semantic_chunking.py
src/core/: exceptions.py  factory.py  pipeline.py  utils.py
src/data_processing/: __init__.py  base_json_extractor.py  base_pdf_extractor.py  case_extractor.py  case_pdf_extractor.py
src/document_processing/: metadata_extractor.py  pdf_extractor.py  text_cleaner.py
src/embeddings/: Sentence_transformer_embedder.py  huggingface_embedder.py  openai_embedder.py
src/interfaces/: chunker.py  document_processor.py  embedder.py  llm_provider.py  monitor.py  vector_store.py
src/llm_providers/: anthropic_provider.py  huggingface_provider.py  local_models_provider.py  openai_provider.py
src/misc/: parse_cases.ipynb
src/mlflow_pipeline/: __init__.py  chunk_pillar1.py  chunk_pillar2.py  injest_pillar1.py  process_all.py  process_pillar1.py
src/pillar1/: process_pdfs_with_mlflow.py
src/utils/: __init__.py
src/vector_store/: chroma_store.py  pinecone_store.py  qdrant_store.py  weaviate_store.py
(+297 files in other folders)
